--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -1,3 +1,10 @@
+form{
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:10px ; 
+}
 #main {
   margin: auto;
   display: flex;
@@ -113,7 +120,10 @@
 /* ####onboardin final########################## */
 
 /* ###singup################# */
-
+#avatar-preview{
+border-radius: 50%;
+cursor: pointer;
+}
 /* ###singup final################# */
 .interests-options {
   width: 140px;
