--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -1,9 +1,13 @@
-form{
+form {
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap:10px ; 
+  gap: 10px;
+}
+footer{
+  position: absolute;
+  bottom: 0;
 }
 #main {
   margin: auto;
@@ -19,6 +23,7 @@ form{
   width: 295px;
   height: 56px;
   border: none;
+  color: #ffffff;
 }
 .principal-buttons:hover {
   cursor: pointer;
@@ -55,6 +60,16 @@ form{
   color: #e94057;
   text-decoration: none;
 }
+/* #####tela inicial ################# */
+#logosigninup{
+  margin-top: 100px;
+}
+#logosigninup-h1{
+  margin-top: 100px;
+}
+
+/* ######tela inicial fim################ */
+
 /* ###onboardin################################################################################# */
 
 .carrosel .imagem {
@@ -120,9 +135,9 @@ form{
 /* ####onboardin final########################## */
 
 /* ###singup################# */
-#avatar-preview{
-border-radius: 50%;
-cursor: pointer;
+#avatar-preview {
+  border-radius: 50%;
+  cursor: pointer;
 }
 /* ###singup final################# */
 .interests-options {
@@ -188,6 +203,7 @@ cursor: pointer;
   box-shadow: 0px 15px 15px rgba(233, 64, 87, 0.2);
   cursor: pointer;
 }
+
 .footer {
   position: fixed;
   bottom: 0;
@@ -207,3 +223,41 @@ cursor: pointer;
   cursor: pointer;
 }
 /* ###mainAppView Final################ */
+/* ####YourMatches################# */
+.yourMatchs {
+  display: flex;
+  flex-direction: row;
+}
+.metch-container {
+  margin: 10px;
+  background-color: #000000;
+  border-radius: 16px;
+}
+.yourMatchs .matchs-interactions {
+  max-width: 300px;
+  border-radius: 0 0 15px 15px;
+  width: 100%;
+  height: 90px;
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  align-items: center;
+  background-color: #000000;
+  opacity: 0.7;
+}
+.yourMatchs .matchs-interactions .interaction {
+  background: transparent;
+  border: none;
+  width: 100%;
+  box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.07);
+  cursor: pointer;
+  color: white;
+}
+.yourMatchs .matchs-interactions .interaction * {
+  background: transparent;
+  border: none;
+  width: 50px;
+  cursor: pointer;
+  color: white;
+}
+/* ####finalYourMatches################# */
