--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -9,6 +9,9 @@ footer{
   position: absolute;
   bottom: 0;
 }
+h1{
+  margin-top: 50px;
+}
 #main {
   margin: auto;
   display: flex;
@@ -24,11 +27,13 @@ footer{
   height: 56px;
   border: none;
   color: #ffffff;
+  text-align: center;
 }
 .principal-buttons:hover {
   cursor: pointer;
 }
 .secundary-buttons {
+  text-align: center;
   background: #ffffff;
   width: 295px;
   height: 56px;
@@ -37,6 +42,7 @@ footer{
 }
 .secundary-buttons:hover {
   cursor: pointer;
+  text-align: center;
 }
 .text-input {
   background: #ffffff;
