--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -178,6 +178,7 @@ h1{
 }
 /* ###mainAppView################ */
 .img-user {
+  margin-top: 100px;
   width: 250px;
   height: 350px;
   border-radius: 15px;
@@ -190,6 +191,7 @@ h1{
   justify-content: space-around;
   gap: 10px;
   align-items: center;
+  margin-bottom: 100PX;
 }
 .interactions .interaction {
   background: #ffffff;
