--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -237,7 +237,7 @@ h1{
   flex-direction: row;
 }
 .metch-container {
-  margin: 10px;
+  margin:100px 10px ;
   background-color: #000000;
   border-radius: 16px;
 }
