--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -1,3 +1,6 @@
+*{
+  font-family: 'sk-modernist-bold', sans-serif;
+}
 form {
   margin: auto;
   display: flex;
@@ -11,6 +14,7 @@ footer {
 }
 h1 {
   margin-top: 50px;
+ 
 }
 #main {
   margin: auto;
@@ -72,6 +76,7 @@ h1 {
 }
 #logosigninup-h1 {
   margin-top: 100px;
+  
 }
 
 /* ######tela inicial fim################ */
@@ -102,7 +107,6 @@ h1 {
   opacity: 1;
 }
 .onboardin-title {
-  font-family: "Sk-Modernist";
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -111,7 +115,6 @@ h1 {
   color: #e94057;
 }
 .onboardin-description {
-  font-family: "Sk-Modernist";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -125,7 +128,7 @@ h1 {
   box-shadow: 0px 15px 15px rgba(233, 64, 87, 0.2);
 }
 .onboardin-signin {
-  font-family: "Sk-Modernist";
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
