--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: "sk-modernist-bold", sans-serif;
+  margin: 0;
 }
 form {
   margin: auto;
@@ -15,16 +16,17 @@ footer {
   width: 100%;
   display: flex;
   justify-content: space-between;
-
 }
 h1 {
-  margin-top: 50px;
+  margin-top: 70px;
 }
 #main {
   margin: auto;
   display: flex;
+
   flex-direction: column;
-  width: 500px;
+  min-width: 100vw;
+
   gap: 20px;
   align-items: center;
 }
@@ -62,6 +64,7 @@ h1 {
 }
 .head {
   position: fixed;
+  margin-top: 20px;
   background-color: white;
   width: 100%;
   max-width: 350px;
@@ -88,19 +91,19 @@ h1 {
 /* ###onboardin################################################################################# */
 
 .carrosel .imagem {
+  margin-top: 20px;
   width: 235px;
   height: 360px;
   border-radius: 15px;
   display: none;
 }
 .carrosel .imagem.ativa {
-  margin-top: 50px;
   display: flex;
 }
 .botoes-carrossel .botao {
   background: #000000;
   opacity: 0.1;
-  margin-top: 40px;
+  margin-top: 20px;
   width: 15px;
   height: 15px;
   border-radius: 50%;
@@ -235,7 +238,7 @@ h1 {
   background: transparent;
   border: none;
   width: 64px;
-  height: 64px;;
+  height: 64px;
 
   cursor: pointer;
 }
