--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -256,7 +256,7 @@ h1 {
 }
 .metch-container {
   margin: 100px 10px;
-  background-color: #000000;
+  background-color: transparent;
   border-radius: 16px;
 }
 .yourMatchs .matchs-interactions {
@@ -268,7 +268,7 @@ h1 {
   justify-content: space-around;
   gap: 10px;
   align-items: center;
-  background-color: #000000;
+  background-color: transparent;
   opacity: 0.7;
 }
 .yourMatchs .matchs-interactions .interaction {
