--- a/front/styles/style.css
+++ b/front/styles/style.css
@@ -12,7 +12,7 @@ form {
 footer {
   position: absolute;
   bottom: 0;
-  max-width: 230px;
+  min-width: 400px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -25,8 +25,8 @@ h1 {
   display: flex;
 
   flex-direction: column;
-  min-width: 100vw;
-
+  min-width: 600px;
+  width: 100%;
   gap: 20px;
   align-items: center;
 }
@@ -67,7 +67,7 @@ h1 {
   margin-top: 20px;
   background-color: white;
   width: 100%;
-  max-width: 350px;
+  min-width: 600px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -224,11 +224,12 @@ h1 {
 }
 
 .footer {
+  margin: auto;
   position: fixed;
   bottom: 0;
-  max-width: 350px;
+
   width: 100%;
-  height: 80px;
+  min-width: 600px;
   display: flex;
   justify-content: space-around;
 
@@ -251,25 +252,42 @@ h1 {
 /* ###mainAppView Final################ */
 /* ####YourMatches################# */
 .yourMatchs {
+  min-width: 400px;
+ 
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  margin: auto ;
+  justify-content: center;
 }
-.metch-container {
-  margin: 100px 10px;
-  background-color: transparent;
-  border-radius: 16px;
-}
-.yourMatchs .matchs-interactions {
-  max-width: 300px;
-  border-radius: 0 0 15px 15px;
-  width: 100%;
-  height: 90px;
+.match-container {
+ 
+  width: 40%;
+ 
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.match-container * {
+  margin: 0;
+}
+.match-container img {
+  max-width: 200px;
+}
+
+.yourMatchs .matchs-interactions {
+  border-radius: 0 0 15px 15px;
+  max-width: 200px;
+  width: 100%;
+  display: flex;
+  position: relative;
+  bottom: 56px;
   justify-content: space-around;
   gap: 10px;
-  align-items: center;
-  background-color: transparent;
-  opacity: 0.7;
+  background-color: #000000;
+  opacity: 0.4;
+
 }
 .yourMatchs .matchs-interactions .interaction {
   background: transparent;
@@ -277,14 +295,13 @@ h1 {
   width: 100%;
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.07);
   cursor: pointer;
-  color: white;
+
 }
 .yourMatchs .matchs-interactions .interaction * {
   background: transparent;
   border: none;
   width: 50px;
 
-  color: white;
 }
 /* ####finalYourMatches################# */
 
